2005-02-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkscreen.c, rbgtkaccelgroup.c: Fix compilation problems 
	on MSVC++.

2005-02-13  KATO Kazuyoshi  <kzys@8-p.info>

	* sample/gtk-demo/appwindow.rb, buttom_box.rb, changedisplay.rb, colorsel.rb,
	  dialog.rb, drawingarea.rb, iconview.rb, images.rb, item_factory.rb,
	  menus.rb, panes.rb, pixbufs.rb, sizegroup.rb, stock_browser.rb: 
	  Change comment style to follow sample/gtk-demo/main.rb changes.
	* sample/gtk-demo/clipboard.rb, menus.rb, panes.rb: ditto.

2005-02-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpangorenderer.c: Added Pango::Renderer.default. 
	* sample/misc/pangorenderer.rb: Check Ruby/GTK version. 

2005-02-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkradioaction.c: Added Gtk::RadioAction#group, #set_group. 

2005-02-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Added Gdk::Window#configure_finished, 
	#enable_synchronized_configure, #set_focus_on_map for GTK+-2.6.
	* src/rbgdkdraw.c: Added Gdk::Drawable#draw_trapezoids, #draw_glyphs_transformed
	for GTK+-2.6.

2005-02-07  KATO Kazuyoshi  <kzys@8-p.info>

	* sample/gtk-demo/main.rb (Demo::Main): Generate demos index from script files.
	* sample/gtk-demo/editable_cells.rb, list_store.rb, textview.rb, tree_store.rb:
	Change comment style to follow sample/gtk-demo/main.rb changes.

2005-02-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkentrycompletion.c: Fixed a problem of property setter.
	Reported by Joao Pedrosa.
	* sample/gtk-demo/entry_completion.rb: ditto.

2005-02-02  Joao Pedrosa  <joaopedrosa@gmail.com>

	* sample/gtk-demo/drawingarea.rb: Fixed a bug.

2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkevent.c: Added Gdk::EventOwnerChange for GTK+-2.6.
	* src/rbgdkdisplay.c: Added Gdk::Display#(supports|request)_selection_notification?,
	#supports_clipboard_persistence?, #store_clipboard for GTK+-2.6.

2005-01-31  KATO Kazuyoshi  <kzys@8-p.info>
